horizontal rule-age across the page (but there's a little issue in that overflow happens way across the page's x-axis)

--- a/app/styl/app.styl
+++ b/app/styl/app.styl
@@ -35,8 +35,8 @@ coloured-pencil($colour)
 
 
 body
-	background: #EEECDF
-	// padding-top 40px
+	background #EEECDF
+	overflow-x hidden
 
 header
 	text-align center
@@ -69,6 +69,7 @@ header
 			height 100%
 
 		.sketchpad-editor
+			z-index 30
 			-moz-user-select text
 			cursor crosshair
 			border 1px solid black
@@ -81,10 +82,13 @@ header
 			box-shadow(1px, 1px, 2px, rgba(0, 0, 0, 0.18))
 
 			> div
+				z-index 40
 				height 100%
+				*
+					z-index 50
 
 		.sketchpad-editor:before
-			z-index: -1
+			z-index 20
 			position: absolute
 			top: -2px
 			left: 0
@@ -97,7 +101,7 @@ header
 			transform-rotate(2deg)
 
 		.sketchpad-editor:after
-			z-index -2
+			z-index 10
 			position absolute
 			top 1px
 			left -2px
@@ -124,7 +128,7 @@ header
 			background-attachment scroll
 			background-color transparent
 			background-size 240px 20px
-			background-position -13px 446px
+			background-position -13px 447px
 			background-repeat no-repeat no-repeat
 
 			.pencil-case
@@ -222,10 +226,31 @@ header
 						border-top-right-radius 5px
 
 
-
 	.sketch_page
+		.row-sketchpad
+			margin-bottom -50px
+
 		.row-picker
-			margin-top 50px
+			padding-top 100px
+			position relative
+
+			background #eeecdf
+			background -moz-linear-gradient(left,  #eeecdf 0%, #edead7 24%, #eae6cc 50%, #edead7 79%, #eeecdf 100%)
+			background -webkit-gradient(linear, left top, right top, color-stop(0%,#eeecdf), color-stop(24%,#edead7), color-stop(50%,#eae6cc), color-stop(79%,#edead7), color-stop(100%,#eeecdf))
+			background -webkit-linear-gradient(left,  #eeecdf 0%,#edead7 24%,#eae6cc 50%,#edead7 79%,#eeecdf 100%)
+			background -o-linear-gradient(left,  #eeecdf 0%,#edead7 24%,#eae6cc 50%,#edead7 79%,#eeecdf 100%)
+			background -ms-linear-gradient(left,  #eeecdf 0%,#edead7 24%,#eae6cc 50%,#edead7 79%,#eeecdf 100%)
+			background linear-gradient(to right,  #eeecdf 0%,#edead7 24%,#eae6cc 50%,#edead7 79%,#eeecdf 100%)
+
+			.hr
+				position absolute
+				top 0
+				left -5000px
+				width 9999px
+				height 1px
+				background transparent
+				border-top 1px solid #ccc
+				box-shadow(-1px, -1px, 8px, #ccc)
 			h2
 				display block
 				font-size 2.1em
@@ -246,6 +271,10 @@ header
 				background transparent url("../img/xmas-header-decor.png") no-repeat scroll -54px 2px
 			form
 				margin-top 15px
+
+		.row-share-button
+			margin-top 30px
+			margin-bottom 60px
 
 	ul.charities
 		list-style-type none
